intro, EDV, pre-processing

--- a/pokemon.tex
+++ b/pokemon.tex
@@ -163,6 +163,15 @@ Speed: determines which pokemon attacks first each round
 ##  Max.   :25.0   Max.   :120.00
 \end{verbatim}
 
+\paragraph{1.1.1 Generations}\label{generations}
+
+Pokemon generation refers to a chronological division by release; The
+fisrt generation of the video game came up in 1996 'Pokemon Red and
+Green for Game Boy, each new generation brings to live new Pokemon,
+characters and features. I total there are 7 generations.
+
+`''\{r generations\} table(pokemon\$Type.1) `''
+
 \subsection{2 Data Exploration}\label{data-exploration}
 
 You can also embed plots, for example:
